k8s/prestashop/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: prestashop
spec:
  selector:
    app: prestashop
  ports:
    - protocol: TCP
      port: 80
      targetPort: 4000
